# inaugural-lecture

./: .gitignore  essay.md
.github/workflows/: build.yml
demo/: Readme.md  pyproject.toml  pytest.toml  requirements.txt  start.sh
demo/src/teachgrav/: array_abstraction.py  benchmark.py  entry.py  gp.py  integrator.py  jax_integrator.py  laws.py  pl.py  scenarios.py  system.py  viz.py
demo/src/teachgrav/notebooks/: gp.ipynb
demo/tests/teachgrav/: test_entry.py  test_gp.py  test_integrator.py  test_laws.py  test_pl.py  test_scenarios.py  test_system.py  test_viz.py
