# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "teachgrav"
version = "0.0.1"
authors = [
  { name="James Hetherington", email="j.hetherington@ucl.ac.uk" },
]
description = "A pedagogical programming exercise based on a gravity simulation"
readme = "Readme.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "scikit-learn",
    "jax==0.5.0;platform_system == 'Darwin'", "jax-metal==0.1.1;platform_system == 'Darwin'", # if on Apple Silicon
    "jax;platform_system != 'Darwin'", "jax[cpu];platform_system != 'Darwin'", 
    "equinox", # if not on Apple Silicon, Equinox
    "diffrax;platform_system != 'Darwin'", # if not on Apple Silicon, Diffrax
    "diffrax==0.7.2;platform_system == 'Darwin'", # if on Apple Silicon might need an older diffrax
    "mlx;platform_system == 'Darwin'", # if on Apple Silicon, MLX
]

[project.optional-dependencies]
dev = [
    "pytest"
]
cuda = [
    "cupy",
    "jax[cuda13]"
]


[project.scripts]
teachgrav = "teachgrav.entry:entry"

